--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,27 +66,21 @@ jobs:
     needs:
       - integration-test
     steps:
-      # checkout code
       - uses: actions/checkout@v4
-#      # authenticate with GCP with workload identity provider
       - uses: 'google-github-actions/auth@v2'
        id: auth
-       name: Authenticate to GCP
+      - name: Authenticate to GCP
        with:
          project_id: 'cs1660-2-451314'
          workload_identity_provider: 'projects/55953200222/locations/global/workloadIdentityPools/github/providers/my-repo'
-
-#      # configure/login with docker
       - name: gcloud Configure Docker
        run: gcloud auth configure-docker northamerica-northeast1-docker.pkg.dev
 
-#      # setup docker buildx
       - name: Setup docker buildx
        uses: docker/setup-buildx-action@v3
        with:
          platforms: linux/amd64,linux/arm64
 
-#      # build and push the image
       - name: Build and Push
        uses: docker/build-push-action@v6
        with:
